namespace foll_backend.EmergencyAnalytics.Interfaces.REST.Resources;

public record CloseEmergencyIncidentResource(string? Observation);
