namespace foll_backend.EmergencyAnalytics.Interfaces.REST.Resources;

public record UpdateEmergencyIncidentObservationResource(string Observation);
